Fix: center image follow & cursor-alignment (GSAP)

--- a/cynthia.css
+++ b/cynthia.css
@@ -32,6 +32,8 @@ body{
 }
 #move-circle{
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 999;
     height: 15px;
     width: 15px;
