--- a/media.css
+++ b/media.css
@@ -141,8 +141,8 @@
         font-size: 1.4rem;
     }
     .page2-ele img {
-        height: 20vw;
-        width: 20vw;
+        height: 400px;
+        width: 400px;
     }
 }
 
